[gd_scene load_steps=3 format=3 uid="uid://db7k3xy1m8pqv"]

[ext_resource type="Theme" uid="uid://bfvxqkp6lm5r3" path="res://resources/themes/default_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/ui/food_selection_popup_controller.gd" id="2_script"]

[node name="FoodSelectionPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color(0, 0, 0, 0.5)

[node name="PopupPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PopupPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PopupPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select Food"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PopupPanel/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "Ã—"

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FoodGrid" type="GridContainer" parent="PopupPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="HSeparator2" type="HSeparator" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="PopupPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Confirm"